ops/op/test_cases_fail/lifetimes.stderr
error: unused import: `deno_core::error::AnyError`
 --> ../op/test_cases_fail/lifetimes.rs:4:5
  |
4 | use deno_core::error::AnyError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> ../op/test_cases_fail/lifetimes.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_imports)]` implied by `#[deny(warnings)]`

error: unused import: `std::future::Future`
 --> ../op/test_cases_fail/lifetimes.rs:6:5
  |
6 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^

error[E0597]: `handle_` does not live long enough
  --> ../op/test_cases_fail/lifetimes.rs:12:1
   |
12 | #[op(fast)]
   | ^^^^^^^^^^-
   | |         |
   | |         `handle_` dropped here while still borrowed
   | borrowed value does not live long enough
   | argument requires that `handle_` is borrowed for `'static`
   |
   = note: this error originates in the attribute macro `op` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `arg0_temp` does not live long enough
  --> ../op/test_cases_fail/lifetimes.rs:15:1
   |
15 | #[op(fast)]
   | ^^^^^^^^^^-
   | |         |
   | |         `arg0_temp` dropped here while still borrowed
   | borrowed value does not live long enough
   | argument requires that `arg0_temp` is borrowed for `'static`
   |
   = note: this error originates in the attribute macro `op` (in Nightly builds, run with -Z macro-backtrace for more info)
